--- a/finalCoordinates/src/Components/Grid/grid.css
+++ b/finalCoordinates/src/Components/Grid/grid.css
@@ -1,10 +1,3 @@
-.grid-container {
-  display: grid;
-  grid-auto-flow: column;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(10, 1fr);
-  width: 100%;
-}
 
 .grid {
   border-color: black;
@@ -23,4 +16,16 @@
 
 .mud {
   background-color:  #753107 ;
+}
+
+.player{
+  background-color: #0099ff;
+  height: 100%;
+  width: 100%;
+}
+
+.finish{
+  background-color: #18eb09;
+  height: 100%;
+  width: 100%;
 }
