--- a/finalCoordinates/src/Components/RenderBoard/renderBoard.css
+++ b/finalCoordinates/src/Components/RenderBoard/renderBoard.css
@@ -1,9 +1,8 @@
 .board-container {
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: 1fr, 20%;
   height: 100vh;
   width: 100vw;
-
 }
 
 .grid-container {
@@ -12,7 +11,7 @@
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
   width: 100%;
-  height: 300ox;
+  height: 100%;
 }
 
 
@@ -20,6 +19,10 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-template-rows: repeat(1, 1fr);
-  
+  font-size: 24px;
+  align-items: center;
+  text-align: center;
+  height: 10%;
+  width: 100%;
 }
 
