--- a/finalCoordinates/src/Components/Grid/grid.css
+++ b/finalCoordinates/src/Components/Grid/grid.css
@@ -2,8 +2,8 @@
 .grid {
   border-color: black;
   border: 1px solid;
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
 }
 
 .speeder {
@@ -25,7 +25,7 @@
 }
 
 .finish{
-  background-color: #18eb09;
+  background-color: #f3ff67;
   height: 100%;
   width: 100%;
 }
