--- a/finalCoordinates/src/Components/RenderBoard/renderBoard.css
+++ b/finalCoordinates/src/Components/RenderBoard/renderBoard.css
@@ -1,6 +1,6 @@
 .board-container {
   display: grid;
-  grid-template-columns: 1fr, 20%;
+  grid-template-columns: (1fr, 20%);
   height: 100vh;
   width: 100vw;
 }
@@ -8,10 +8,11 @@
 .grid-container {
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: repeat(100, 1fr);
+  grid-template-rows: repeat(100, 1fr);
   width: 100%;
-  height: 100%;
+  height: 90vh;
+  position: absolute;
 }
 
 
@@ -24,5 +25,7 @@
   text-align: center;
   height: 10%;
   width: 100%;
+  position: fixed;
+  bottom: 0;
 }
 
