--- a/finalCoordinates/src/Components/RenderBoard/renderBoard.css
+++ b/finalCoordinates/src/Components/RenderBoard/renderBoard.css
@@ -10,11 +10,9 @@
   grid-auto-flow: column;
   grid-template-columns: repeat(100, 1fr);
   grid-template-rows: repeat(100, 1fr);
-  width: 90vh;
+  width: 100%;
   height: 90vh;
   position: absolute;
-  padding-left: 27%;
-  padding-top: 20px; 
 }
 
 
@@ -31,6 +29,3 @@
   bottom: 0;
 }
 
-.movementKeys{
-  
-}
