--- a/finalCoordinates/src/Components/RenderBoard/renderBoard.css
+++ b/finalCoordinates/src/Components/RenderBoard/renderBoard.css
@@ -8,10 +8,10 @@
 .grid-container {
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: repeat(100, 1fr);
-  grid-template-rows: repeat(100, 1fr);
-  width: 90vh;
-  height: 90vh;
+  grid-template-columns: repeat(550, 1fr);
+  grid-template-rows: repeat(550, 1fr);
+  width: 100%;
+  height: 100%;
   position: absolute;
   padding-left: 27%;
   padding-top: 20px; 
