--- a/finalCoordinates/src/Components/RenderBoard/renderBoard.css
+++ b/finalCoordinates/src/Components/RenderBoard/renderBoard.css
@@ -31,3 +31,37 @@
   bottom: 0;
 }
 
+.blankText{
+  color:aliceblue;
+  text-shadow:
+        0.07em 0 black,
+        0 0.07em black,
+        -0.07em 0 black,
+        0 -0.07em black;
+}
+.speederText{
+  color:green;
+  text-shadow:
+        0.07em 0 black,
+        0 0.07em black,
+        -0.07em 0 black,
+        0 -0.07em black;
+}
+
+.lavaText{
+  color:#ff0000;
+  text-shadow:
+        0.07em 0 black,
+        0 0.07em black,
+        -0.07em 0 black,
+        0 -0.07em black;
+}
+
+.mudText{
+  color:#753107;
+  text-shadow:
+        0.07em 0 black,
+        0 0.07em black,
+        -0.07em 0 black,
+        0 -0.07em black;
+}
