--- a/finalCoordinates/src/Components/Grid/grid.css
+++ b/finalCoordinates/src/Components/Grid/grid.css
@@ -1,7 +1,7 @@
 
 .grid {
-  border-color: black;
-  border: 1px solid;
+  /* border-color: black;
+  border: 1px solid; */
   width: auto;
   height: auto;
 }
