--- a/finalCoordinates/src/Components/RenderBoard/renderBoard.css
+++ b/finalCoordinates/src/Components/RenderBoard/renderBoard.css
@@ -8,13 +8,13 @@
 .grid-container {
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: repeat(550, 1fr);
-  grid-template-rows: repeat(550, 1fr);
+  grid-template-columns: repeat(600, 1fr);
+  grid-template-rows: repeat(600, 1fr);
   width: 100%;
   height: 100%;
   position: absolute;
   padding-left: 27%;
-  padding-top: 20px; 
+  padding-top: 20px;
 }
 
 
@@ -23,11 +23,11 @@
   grid-template-columns: repeat(1, 1fr);
   grid-template-rows: repeat(1, 1fr);
   font-size: 24px;
-  align-items: center;
+  /* align-items: center;
   text-align: center;
   height: 10%;
   width: 100%;
   position: fixed;
   bottom: 0;
-}
+} */
 
