added blink and animate to identify start and finish

--- a/finalCoordinates/src/Components/Grid/grid.css
+++ b/finalCoordinates/src/Components/Grid/grid.css
@@ -20,12 +20,30 @@
 
 .player{
   background-color: #0099ff;
+  animation: blink 1s linear infinite;
+  -webkit-animation: backgroundColor 2s linear infinite;
   height: 100%;
   width: 100%;
 }
 
 .finish{
-  background-color:  #fdf903; 
+  background-color:  #0099ff; 
+  animation: blink 2s linear infinite;
   height: 100%;
   width: 100%;
+}
+
+@keyframes blink {
+  1%, 3% {opacity: 0;}
+  2%, 4% {opacity: 1;}
+}
+
+@-webkit-keyframes backgroundColor
+{
+    0%   {background: purple; }
+    20% {background: yellow; }
+    40% {background: pink; }
+    60% {background: green; }
+    80% {background: orange; }
+    100% {background: purple; }
 }
